--- a/README
+++ b/README
@@ -7,3 +7,4 @@ script currently accepts range in CIDR or single IP.
 needs modules netaddr and pyopenssl from pip or easy_install
 
 latest update adds second argument for a timeout value in seconds. 
+Version 1.0
